# mc-voxelizer-gui

./: README.md
mc-voxelizer-gui/: .gitignore  README.md  index.html  issues_todo.txt  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mc-voxelizer-gui/src/: App.tsx  index.css
mc-voxelizer-gui/src-tauri/: Cargo.toml  tauri.conf.json
mc-voxelizer-gui/src-tauri/binaries/: README.md
mc-voxelizer-gui/src-tauri/capabilities/: default.json
mc-voxelizer-gui/src-tauri/src/: lib.rs  main.rs
mc-voxelizer-gui/src/components/: BatchSettings.tsx  EmptyState.tsx  FileCard.tsx  LogDrawer.tsx  PreferencesModal.tsx  SettingsPanel.tsx  Sidebar.tsx  SingleFileSettings.tsx  StatusBar.tsx  Toolbar.tsx
mc-voxelizer-gui/src/hooks/: useConversionQueue.ts
mc-voxelizer-gui/src/store/: useAppStore.ts
mc-voxelizer-gui/src/types/: index.ts
mc-voxelizer-gui/src/utils/: logParser.ts  pathUtils.ts
