[package]
name = "mc-voxelizer-gui"
version = "1.3.0"
description = "Minecraft Voxelizer GUI"
authors = ["DarkAddons"]
edition = "2021"

[lib]
name = "mc_voxelizer_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = ["devtools"] }
tauri-plugin-shell   = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-opener  = "2"
tauri-plugin-fs      = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows process suspend/resume
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }
